blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: blue-deployment 
  name: blue-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: blue-deployment
        version: v1
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - name: app-volume
          mountPath: /usr/share/nginx/html 
      volumes:
      - name: app-volume 
        hostPath:
          path: /data 
status: {}
