busybox-volume.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/restartedAt: "2025-03-11T20:40:11-06:00"
  creationTimestamp: "2025-03-12T02:40:11Z"
  generateName: busybox-volume-85b87f79f8-
  labels:
    app: busybox
    pod-template-hash: 85b87f79f8
  name: busybox-volume-85b87f79f8-8sdqs
  namespace: test-demo
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: busybox-volume-85b87f79f8
    uid: 2996da42-ad30-41a9-9488-02d85f97b071
  resourceVersion: "405602"
  uid: afa06335-f4ef-4061-897c-0510a9d7b9d3
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - echo Hello kubernetes!, excited about the journey >> /data/k8s-config && tail -f /dev/null
    image: busybox
    imagePullPolicy: Always
    name: busybox-volume
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /data/
      name: test-vol
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-crnnd
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - hostPath:
      path: /data/tmp-config
      type: DirectoryOrCreate
    name: test-vol
  - name: kube-api-access-crnnd
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-03-12T02:40:16Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2025-03-12T02:40:11Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2025-03-21T00:35:25Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2025-03-21T00:35:25Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2025-03-12T02:40:11Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://45e36ddbb5eb83452784da57e1d71aae150258cc637f23739e2c3090442fffa1
    image: busybox:latest
    imageID: docker-pullable://busybox@sha256:37f7b378a29ceb4c551b1b5582e27747b855bbfaa73fa11914fe0df028dc581f
    lastState:
      terminated:
        containerID: docker://235b6292e25544e47816e76c9b646d923957cc7e3d34fb9e4363d9a89bc5de6a
        exitCode: 0
        finishedAt: "2025-03-21T00:35:24Z"
        reason: Completed
        startedAt: "2025-03-20T13:54:29Z"
    name: busybox-volume
    ready: true
    restartCount: 32
    started: true
    state:
      running:
        startedAt: "2025-03-21T00:35:25Z"
    volumeMounts:
    - mountPath: /data/
      name: test-vol
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-crnnd
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 192.168.49.2
  hostIPs:
  - ip: 192.168.49.2
  phase: Running
  podIP: 10.244.1.50
  podIPs:
  - ip: 10.244.1.50
  qosClass: BestEffort
  startTime: "2025-03-12T02:40:11Z"
