green-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: green-deployment 
  name: green-deployment 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green-deployment 
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: green-deployment 
        version: v2 
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - name: app-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app-volume
        hostPath:
          path: /data 
status: {}
