iftar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: iftar-deployment
  name: iftar-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iftar-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: iftar-deployment
    spec:
      containers:
      - image: mabdi05/maghrib-notifier:latest
        name: maghrib-notifier
        resources: {}
status: {}
