log-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: logging
  name: logging
spec:
  containers:
  - image: mabdi05/log-generator:latest
    name: logging
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
