mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo
        name: mongodb
        ports:
        - containerPort: 27017
        resources: {}
      volumeMounts:
        - name: vol 
          mountPath: /var/configs/mongo-logs 
      volumes:
      - name: vol 
        persistentVolumeReclaimPolicy:
          claimName: mongo-pvclaim 
status: {}
