php-webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: php-webapp
  name: php-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-webapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: php-webapp
    spec:
      containers:
      - image: phpmyadmin
        name: phpmyadmin
        ports:
        - containerPort: 80
        resources: {}
status: {}
