blue-green-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blue-green-service 
spec:
  selector:
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080 
  type: NodePort
