externam-mongo.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mongo-express
  name: mongo-exporess-service
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: mongo-express
  type: NodePort  
status:
  loadBalancer: {}
