ingress-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ingress-demo
  name: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ingress-demo
    spec:
      containers:
      - image: nginxdemos/hello
        name: hello
        ports:
        - containerPort: 80
        resources: {}
status: {}

# internal service
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ingress-demo
  name: ingress-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ingress-demo
status:
  loadBalancer: {}

# ingress resource manifest.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: null
  name: ingress-demo
spec:
  ingressClassName: nginx
  rules:
  - host: hello-ingress.com
    http:
      paths: 
      - backend:
          service:
            name: ingress-demo
            port:
              number: 80
        path: /hello
        pathType: Exact
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-demo
            port:
              number: 80
status:
  loadBalancer: {}

# Nginx-ingress controller manifest for testing.
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
