ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: argo-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"  
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd-test.local
    http:
      paths:
      - backend:
          service:
            name: external-service
            port:
              number: 443
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
# Nginx Ingress Controller manifest files.
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
