mongo-express-ingres.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: null
  labels:
    app.kubernetes.io/instance: demo-app
  name: mongo-express-ingres
  namespace: test-demo
spec:
  ingressClassName: nginx
  rules:
    - host: mongo-example.com
      http:
        paths:
          - backend:
              service:
                name: external-service
                port:
                  number: 8081
            path: /db
            pathType: Exact
status:
  loadBalancer: {}
