mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: mongo-express-ingres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mongo-example.com
    http:
      paths:
      - backend:
          service:
            name: external-service
            port:
              number: 8081
        path: /db
        pathType: Exact
status:
  loadBalancer: {}
