network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-netpol 
  namespace: default
spec:
  podSelector:
    matchLabels:
      app:  pod2
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod1 
    ports:
    - protocol: TCP 
      port: 80 
  egress:
  - to:
    - podSelector:
       matchLabels:
         app: pod1 
    ports:
    - protocol: TCP 
      port: 80
